updated to use DefaultHandler